feat: use about me desc as the index page center content

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,11 +1,12 @@
 ---
 layout: ../layouts/AboutLayout.astro
 title: "关于我"
+description: "一个啥都略懂的 DevOps 工程师👨‍🔧，专注于研发效能领域，擅长设计方案、应用新技术解决研发过程中的各种问题。"
 ---
 
 import Socials from "@components/Socials.astro";
 
-一个啥都略懂的 DevOps 工程师👨‍🔧，专注于研发效能领域，擅长设计方案、应用新技术解决研发过程中的各种问题。
+{frontmatter.description}
 
 <Socials />
 
