--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -46,20 +46,24 @@ import Socials from "@components/Socials.astro";
 ### 开发 | Develop
 
 - Python
-- GoLang
-- VueJS 2
+- VueJS
+- Astro
 - JavaScript
 - Java
+- GoLang
+- React
+- CSS
 
 ### 运维 | Operation
 
-- Ansible
-- Docker
-- Shell
 - Linux
-- Ldap
+- Shell
+- Docker
+- Kubernetes
 - Jenkins
+- Ansible
 - GitLab
+- Ldap
 
 ### 其它 | Others
 
