feat: add gist url convert to tag feature, and update the README.md for my blog

--- a/src/content/blog/test.mdx
+++ b/src/content/blog/test.mdx
@@ -15,9 +15,6 @@ keywords:
 
 foobar
 
-<script
-  src="https://gist.github.com/Stark-X/3dab3058e1c38d53821ba621ccd461ed.js"
-  is:inline
-></script>
+gist.github.com/Stark-X/3dab3058e1c38d53821ba621ccd461ed
 
 123
