✨ feat: Add source jumping to badage for jumping and add  CKA cert~

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -17,15 +17,24 @@ import Socials from "@components/Socials.astro";
   badges={[
     {
       imageUrl:
+        "https://images.credly.com/size/340x340/images/8b8ed108-e77d-4396-ac59-2504583b9d54/cka_from_cncfsite__281_29.png",
+      name: "CKA",
+      issuer: "LF",
+      link: "https://training.linuxfoundation.org/certification/certified-kubernetes-administrator-cka/",
+    },
+    {
+      imageUrl:
         "https://aliyun-aps-cloud-public.oss-cn-hangzhou.aliyuncs.com/img_534896599bc706c1c10423419510fdea.png",
       name: "ACP",
       issuer: "Aliyun",
+      link: "https://www.alibabacloud.com/zh/academy/certification/acp/cloudcomputing",
     },
     {
       imageUrl:
         "https://images.squarespace-cdn.com/content/v1/53589984e4b0ed47accdc174/1577605936120-B5ULHRWSMQ3CH9AOTLHD/SAFe5-SA_300px.png?format=1000w",
       name: "SAFe®5 Agilist",
       issuer: "ScaledAgile",
+      link: "https://scaledagile.com/safe-certification/",
     },
   ]}
 />
