📝 docs: Update about page with new role and skills

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../layouts/AboutLayout.astro
 title: "关于我"
-description: "一个啥都略懂的 DevOps 工程师👨‍🔧，专注于研发效能领域，擅长设计方案、应用新技术解决研发过程中的各种问题。"
+description: "一个啥都略懂的 DevOps / AI Software Developer👨‍🔧，专注于研发效能领域，擅长设计方案、应用新技术解决研发过程中的各种问题。"
 ---
 
 import Album from "@components/Album.astro";
@@ -41,25 +41,28 @@ import Socials from "@components/Socials.astro";
 
 ## 经历 | Experience
 
-- 2021年3月- ：众安国际 | ZATI
+- 2025年6月- ：奇富科技（原 360 数科） | QFIN
+- 2021年3月- 2025年6月：众安国际 | ZATI
 - 2018年6月- 2021年3月 ：思特沃克软件技术（北京）有限公司深圳分公司 | ThoughtWorks
 - 2016年6月- 2018年6月：东方海外货柜航运有限公司（中国）珠海分公司 | OOCL-ISD
 - 2012年9月- 2016年6月：计算机科学与技术，北京师范大学珠海分校 | BNUZ
 
 ## 工作 | Work
 
-运维开发工程师 | DevOps
+- AI 应用开发工程师 | AI Software Developer
+- 运维开发工程师 | DevOps
 
 ## 技能 | Skill
 
 ### 开发 | Develop
 
 - Python
+- LangGraph
+- GoLang
 - VueJS
 - Astro
 - JavaScript
 - Java
-- GoLang
 - React
 - CSS
 
